--- a/crates/mrb-src/Cargo.toml
+++ b/crates/mrb-src/Cargo.toml
@@ -10,6 +10,6 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 tar = "0.4.38"
-reqwest = { version = "0.11.11", features = ["blocking"] }
+ureq = "<2.4.0"
 flate2 = "1.0.24"
 cc = "1.0.73"
